--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,6 +51,8 @@ jobs:
             **/.github/
             **/tests/
             **/.env
+            **/.gitattributes
+            **/.gitignore
 
       - name: 🧹 Cleanup
         run: rm -f .env
