update yml file

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,6 +53,8 @@ jobs:
             **/.env
             **/.gitattributes
             **/.gitignore
+            
+          dangerous-clean-slate: true
 
       - name: 🧹 Cleanup
         run: rm -f .env
